--- a/catalog.html
+++ b/catalog.html
@@ -280,7 +280,7 @@
             <li><a href="materials.html">Материалы</a></li>
             <li><a href="equipment.html">Техника</a></li>
             <li><a href="tool.html">Инструмент</a></li>
-            <li><a href="special-offers.html">Спецпредложения</a></li>+
+            <li><a href="special-offers.html">Спецпредложения</a></li>
           </ul>          
         </div>
       </div>
