--- a/catalog.html
+++ b/catalog.html
@@ -40,7 +40,7 @@
         </div>
         </div>
       </div>
-      <nav class="main-navigation"><!-- основная навигация -->    
+      <nav class="main-navigation"><!-- основная навигация -->
         <div class="container">
           <ul class="site-navigation">
             <li><a href="index.html">Главная</a></li>
@@ -77,7 +77,7 @@
       <section class="container-filters">
         <div class="filters">
           <h2>Фильтр:</h2>
-          <form>
+          <form class="filter" method="post" action="#">
             <fieldset class="price">
               <legend>Цена:<legend>
               <p>
