--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                 </a>
               </figure>
               <div class="control-box">
-                <span class="button gallery-button gallery-button-back">Назад</span>
-                <span class="button gallery-button gallery-button-next">Вперед</span>
+                <button class="button gallery-button gallery-button-back" type="button">Назад</button>
+                <button class="button gallery-button gallery-button-next" type="button">Вперед</button>
               </div>
               <div class="caption">
                 <a class="button" href="catalog.html">Открыть каталог</a>
@@ -256,11 +256,10 @@
           <div class="contacts">
             <h2>Контакты</h2>
             <p>Вы можете забрать товар сами, заехав в наш офис.</p>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533252!2d30.320858716364103!3d59.938716481876185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sby!4v1542449925434" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-            <!-- одна из кнопок модального окна:  -->
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533252!2d30.320858716364103!3d59.938716481876185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sby!4v1542449925434" width="400" height="300" frameborder="0" style="border:0" allowfullscreen alt=></iframe>
             <button class="button" name="write-us">
               Заблудились? Напишите нам!
-            </button>            
+            </button>
           </div>
         </div>
       </section>
@@ -330,17 +329,28 @@
       <span class="modal-close" aria-label="Закрыть">x</span>
     </section>
 
-    <section class="modal modal-mail visually-hidden"><!-- Здесь будет форма -->
-      <form action="submit">
-        name email
-        <textarea name="" id="" cols="30" rows="10"></textarea>
+    <section class="modal modal-mail visually-hidden">
+      <form class="mail" method="post" action="https://echo.htmlacademy.ru">
+        <p>
+          <label for="user-name">Ваше имя:</label><br>
+          <input id="user-name" type="text" name="name" placeholder="Имя Фамилия">
+        </p>
+        <p>
+          <label for="user-email">Ваш e-mail:</label><br>
+          <input id="user-email" type="text" name="email" placeholder="email@example.com">
+        </p>
+        <p>
+          <label for="message">Текст письма:</label><br>
+          <textarea id="message" name="message" rows="10" cols="45" placeholder="В свободной форме"></textarea>
+        </p>
+        <button class="button" type="submit">Отправить</button>
       </form>
       <span class="modal-close" aria-label="Закрыть">x</span>
     </section>
 
     <section class="modal modal-map">
-      <h2 class="visually-hidden">Как до нас добраться</h2>
-      <span class="modal-close" aria-label="Закрыть">x</span>
+      
+      <button class="modal-close" type="button">Закрыть</button>
     </section>
   </body>
 
