дописал формы, попапы, кнопки и ссылки.

--- a/index.html
+++ b/index.html
@@ -318,17 +318,19 @@
       </div>
     </footer>
 
+    <!-- popUp Cart -->
     <section class="modal modal-buy visually-hidden">
       <div>
         <p>Товар добавлен в корзину!</p>
       </div>
       <div>
-        <button>Оформить заказ</button>
-        <button>Продолжить покупки</button>
+        <button type="button">Оформить заказ</button>
+        <button type="button">Продолжить покупки</button>
       </div>
-      <span class="modal-close" aria-label="Закрыть">x</span>
+      <span class="modal-close">Закрыть</span>
     </section>
 
+    <!-- popUp Mail -->
     <section class="modal modal-mail visually-hidden">
       <form class="mail" method="post" action="https://echo.htmlacademy.ru">
         <p>
@@ -345,11 +347,12 @@
         </p>
         <button class="button" type="submit">Отправить</button>
       </form>
-      <span class="modal-close" aria-label="Закрыть">x</span>
+      <span class="modal-close">Закрыть</span>
     </section>
 
-    <section class="modal modal-map">
-      
+    <!-- popUp Map -->
+    <section class="modal modal-map visually-hidden">
+      <!-- ТУТ БУДЕТ КАРТА -->>
       <button class="modal-close" type="button">Закрыть</button>
     </section>
   </body>
