--- a/catalog.html
+++ b/catalog.html
@@ -75,53 +75,55 @@
 
       <!-- Секция фильтров -->
       <section class="container-filters">
-        <div class="filters">
-          <h2>Фильтр:</h2>
-          <form class="filter" method="post" action="#">
-            <fieldset class="price">
-              <legend>Цена:<legend>
-              <p>
-                <input type="range" name="price" id="price" min="0" max="50000" step="1">
-                <label for="price"></label>
-              </p>
-            </fieldset>
-            <fieldset class="manufacturers">
-              <legend>Производители:</legend>
-              <p>
-                <input type="checkbox" id="bosch" name="manufacturers" checked>
-                <label for="bosch">bosch</label>
-              </p>
-              <p>
-                <input type="checkbox" id="interskol" name="manufacturers">
-                <label for="interskol">интерскол</label>
-              </p>
-              <p>
-                <input type="checkbox" id="makita" name="manufacturers" checked>
-                <label for="makita">makita</label>
-              </p>
-              <p>
-                <input type="checkbox" id="dewalt" name="manufacturers">
-                <label for="dewalt">dewalt</label>
-              </p>
-              <p>
-                <input type="checkbox" id="hitachi" name="manufacturers">
-                <label for="hitachi">hitachi</label>
-              </p>
-            </fieldset>
-            <fieldset class="power">
-              <legend>Питание:</legend>
-              <p>
-                <input type="radio" id="accumulator" name="power" value="accumulator" checked>
-                <label for="accumulator">аккумуляторные</label>
-              </p>
-              <p>
-                <input type="radio" id="networked" name="power" value="networked">
-                <label for="networked">сетевые</label>
-              </p>
-            </fieldset>
-            <input type="submit" value="Показать">
-          </form>
-        </div>
+        <h2>Фильтр:</h2>
+        <form class="filter" method="get" action="#">
+          <fieldset class="price">
+            <legend>Цена:<legend>
+            <p>
+              <input type="range" name="price" id="price" min="0" max="50000" step="1">
+              <label for="price">0 - 30000</label>
+            </p>
+          </fieldset>
+          <fieldset class="manufacturers">
+            <legend>Производители:</legend>
+            <ul>
+              <li>
+                <input type="checkbox" name="bosch" id="filter-bosch" checked>
+                <label for="filter-bosch">bosch</label>
+              </li>
+              <li>
+                <input type="checkbox" name="interskol" id="filter-interskol">
+                <label for="filter-interskol">интерскол</label>
+              </li>
+              <li>
+                <input type="checkbox" name="manufacturers" id="filter-makita" checked>
+                <label for="filter-makita">makita</label>
+              </li>
+              <li>
+                <input type="checkbox" name="manufacturers" id="filter-dewalt">
+                <label for="filter-dewalt">dewalt</label>
+              </li>
+              <li>
+                <input type="checkbox" name="manufacturers" id="filter-hitachi">
+                <label for="filter-hitachi">hitachi</label>
+              </li>
+            </ul>
+          </fieldset>
+          <fieldset class="power">
+            <legend>Питание:</legend>
+            <ul>
+              <li>
+                <input type="radio" id="filter-accumulator" name="power" value="accumulator" checked>
+                <label for="filter-accumulator">аккумуляторные</label>
+              </li>
+              <li>
+                <input type="radio" id="filter-networked" name="power" value="networked">
+                <label for="filter-networked">сетевые</label>
+              </li>
+            </ul>
+          </fieldset>
+          <button type="submit">Показать</button>
+        </form>
       </section>
 
       <!-- Сортировка -->
@@ -307,5 +309,17 @@
         </div>
       </div>
     </footer>
+
+    <!-- popUp -->
+    <section class="modal modal-buy visually-hidden">
+      <div>
+        <p>Товар добавлен в корзину!</p>
+      </div>
+      <div>
+        <button type="button">Оформить заказ</button>
+        <button type="button">Продолжить покупки</button>
+      </div>
+      <span class="modal-close">Закрыть</span>
+    </section>
   </body>
 </html>
