правки по кнопкам, ссылкам и попапам

--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
   <body>
     <header class="main-header">
       <!-- верхний блок шапки -->
-      <div class="header-top">     
+      <div class="header-top">
         <div class="container">
           <a class="header-logo" href="index.html">Техномарт</a>
           <form class="search">
@@ -78,7 +78,7 @@
         <h2>Фильтр:</h2>
         <form class="filter" method="get" action="#">
           <fieldset class="price">
-            <legend>Цена:<legend>
+            <legend>Цена:</legend>
             <p>
               <input type="range" name="price" id="price" min="0" max="50000" step="1">
               <label for="price">0 - 30000</label>
@@ -141,43 +141,43 @@
 
         <ul class="catalog-list">
           <li class="catalog-item">
-            <figure class="catalog-item-image">           
+            <figure class="catalog-item-image">
               <img src="img/snippet-3.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
-            </figure>              
+            </figure>
             <h3>
               <span class="catalog-category">Перфоратор BOSCH</span>
-              <span class="catalog-item-title">BFG 3000</span>                
+              <span class="catalog-item-title">BFG 3000</span>
             </h3>
             <p class="old-price">22500 ₽.</p>
             <p class="new-price">15500 ₽.</p>
           </li>
           <li class="catalog-item">
-            <figure class="catalog-item-image">           
+            <figure class="catalog-item-image">
               <img src="img/snippet-2.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
-            </figure>              
+            </figure>
             <h3>
               <span class="catalog-category">Перфоратор BOSCH</span>
-              <span class="catalog-item-title">BFG 6000</span>                
+              <span class="catalog-item-title">BFG 6000</span>
             </h3>
             <p class="old-price">30500 ₽.</p>
             <p class="new-price">25500 ₽.</p>
           </li>
           <li class="catalog-item new">
             <a class="button-buy" href="#">Купить</a>
-            <a class="button-bookmarks" href="#">В закладки</a>       
+            <a class="button-bookmarks" href="#">В закладки</a>
             <h3>
               <span class="catalog-category">Перфоратор BOSCH</span>
-              <span class="catalog-item-title">BFG 2000</span>                
-            </h3>              
+              <span class="catalog-item-title">BFG 2000</span>
+            </h3>
             <p class="new-price">12500 ₽.</p>
           </li>
           <li class="catalog-item">
-            <figure class="catalog-item-image">           
+            <figure class="catalog-item-image">
               <img src="img/snippet-3.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
-            </figure>              
+            </figure>
             <h3>
               <span class="catalog-category">Перфоратор BOSCH</span>
-              <span class="catalog-item-title">BFG 3000</span>                
+              <span class="catalog-item-title">BFG 3000</span>
             </h3>
             <p class="old-price">22500 ₽.</p>
             <p class="new-price">15500 ₽.</p>
@@ -185,21 +185,21 @@
           <li class="catalog-item new">
             <figure class="catalog-item-image">
               <img src="img/snippet-2.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
-            </figure>              
+            </figure>
             <h3>
               <span class="catalog-category">Перфоратор BOSCH</span>
-              <span class="catalog-item-title">BFG 6000</span>                
+              <span class="catalog-item-title">BFG 6000</span>
             </h3>
             <p class="old-price">30500 ₽.</p>
             <p class="new-price">25500 ₽.</p>
           </li>
-          <li class="catalog-item">  
+          <li class="catalog-item">
             <figure class="catalog-item-image">
               <img src="img/snippet-3.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
-            </figure>              
+            </figure>
             <h3>
               <span class="catalog-category">Перфоратор BOSCH</span>
-              <span class="catalog-item-title">BFG 2000</span>                
+              <span class="catalog-item-title">BFG 2000</span>
             </h3>
             <p class="old-price">30500 ₽.</p>
             <p class="new-price">12500 ₽.</p>
@@ -207,10 +207,10 @@
           <li class="catalog-item new">
             <figure class="catalog-item-image">
               <img src="img/snippet-3.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
-            </figure>              
+            </figure>
             <h3>
               <span class="catalog-category">Перфоратор BOSCH</span>
-              <span class="catalog-item-title">BFG 3000</span>                
+              <span class="catalog-item-title">BFG 3000</span>
             </h3>
             <p class="old-price">22500 ₽.</p>
             <p class="new-price">15500 ₽.</p>
@@ -218,10 +218,10 @@
           <li class="catalog-item">
             <figure class="catalog-item-image">
               <img src="img/snippet-2.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
-            </figure>              
+            </figure>
             <h3>
               <span class="catalog-category">Перфоратор BOSCH</span>
-              <span class="catalog-item-title">BFG 6000</span>                
+              <span class="catalog-item-title">BFG 6000</span>
             </h3>
             <p class="old-price">30500 ₽.</p>
             <p class="new-price">25500 ₽.</p>
@@ -229,13 +229,13 @@
           <li class="catalog-item">
             <figure class="catalog-item-image">
               <img src="img/snippet-3.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
-            </figure>              
+            </figure>
             <h3>
               <span class="catalog-category">Перфоратор BOSCH</span>
-              <span class="catalog-item-title">BFG 2000</span>                
+              <span class="catalog-item-title">BFG 2000</span>
             </h3>
             <p class="old-price">30500 ₽.</p>
-            <p class="new-price">12500 ₽.</p>              
+            <p class="new-price">12500 ₽.</p>
           </li>
         </ul>
 
@@ -271,33 +271,33 @@
             <li><a href="contacts.html">Контакты</a></li>
           </ul>
         </div>
-      </div>        
+      </div>
       <div class="footer-middle">
         <div class="container">
           <address class="address">
             г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
             +7(812)555-05-55
-          </address>          
+          </address>
           <ul class="footer-top-navigation">
             <li><a href="materials.html">Материалы</a></li>
             <li><a href="equipment.html">Техника</a></li>
             <li><a href="tool.html">Инструмент</a></li>
             <li><a href="special-offers.html">Спецпредложения</a></li>
-          </ul>          
+          </ul>
         </div>
       </div>
-      <!-- СОЦИАЛКИ -->    
+      <!-- СОЦИАЛКИ -->
       <div class="footer-bottom">
         <div class="container">
           <p>
             &copy; 2010-2017 Компания «Техномарт»
             Все права защищены
-          <p>          
+          <p>
           <ul class="footer-social">
             <li><a class="social-button" href="#" aria-label="Вконтакте"></a></li>
             <li><a class="social-button" href="#" aria-label="Фейсбук"></a></li>
             <li><a class="social-button" href="#" aria-label="Инстаграм"></a></li>
-          </ul>          
+          </ul>
           <p>
             Обратная связь:
             <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
@@ -310,16 +310,16 @@
       </div>
     </footer>
 
-    <!-- popUp -->
+    <!-- popUp Cart -->
     <section class="modal modal-buy visually-hidden">
       <div>
         <p>Товар добавлен в корзину!</p>
       </div>
       <div>
-        <button type="button">Оформить заказ</button>
-        <button type="button">Продолжить покупки</button>
+        <a class="button" href="#" tabindex="0">Оформить заказ</a>
+        <a class="button" href="#" tabindex="0">Продолжить покупки</a>
       </div>
-      <span class="modal-close">Закрыть</span>
+      <button class="modal-close" type="button">Закрыть</button>
     </section>
   </body>
 </html>
