--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <li class="catalog-item">
                   <figure class="catalog-item-image">
                     <img src="img/snippet-1.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 9000">
-                  </figure>              
+                  </figure>
                   <h3>
                     <span class="catalog-category">Перфоратор BOSCH</span>
                     <span class="catalog-item-title">BFG 9000</span>
@@ -214,8 +214,8 @@
             <h2>Сервисы</h2>
             <p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
           </div>
-          <div class="delivery">
-            <div class="delivery-list">
+          <div class="services">
+            <div class="services-list">
               <ul>
                 <li>Доставка</li>
                 <li>Гарантия</li>
@@ -224,13 +224,24 @@
             </div>
             <div class="delivery-description">
               <h2>Доставка</h2>
-              <p>Мы с удовольствием доставим ваш товар прямо<br> к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем,<br> поднимая его на ваш этаж!</p>
+              <p>
+                Мы с удовольствием доставим ваш товар прямо<br> к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем,<br> поднимая его на ваш этаж!
+              </p>
             </div>
-            <div class="car-img">
-              <figure>
-                <img src="img/car.jpg" width="100" height="100" alt="Машина">
-                <img src="img/car-shadow.jpg" width="100" height="100" alt="Тень"> <!-- тень по идее можно на цсс сделать -->
-              </figure>
+            <div class="security-description">
+              <h2>Гарантия</h2>
+              <p>
+                Если купленный у нас товар поломается или заискрит,<br> а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый.<br> Дом уж восстановите как-нибудь сами.
+              </p>
+            </div>
+            <div class="credit-description">
+              <h2>Кредит</h2>
+              <p>
+                Залезть в долговую яму стало проще.<br> Кредитные консультации придут вам на помощь.
+              </p>
+              <a class="button" href="#" tabindex="0">
+                Отправить заявку
+              </a>
             </div>
           </div>
         </div>
@@ -247,16 +258,14 @@
               <li>Деловые линии</li>
               <li>Автотрейдинг</li>
               <li>ЖелДорЭкспедиция</li>
-              <button type="button" name="about-us">
-                <a href="#">Подробнее о компании</a>
-              </button>
             </ul>
+            <a class="button" href="about.html" tabindex="0">Подробнее о компании</a>
           </div>
           <!-- КОНТАКТЫ -->
           <div class="contacts">
             <h2>Контакты</h2>
             <p>Вы можете забрать товар сами, заехав в наш офис.</p>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533252!2d30.320858716364103!3d59.938716481876185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sby!4v1542449925434" width="400" height="300" frameborder="0" style="border:0" allowfullscreen alt=></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533252!2d30.320858716364103!3d59.938716481876185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sby!4v1542449925434" width="400" height="300" allowfullscreen></iframe>
             <button class="button" name="write-us">
               Заблудились? Напишите нам!
             </button>
@@ -305,7 +314,7 @@
             <li><a class="social-button" href="#" aria-label="Вконтакте"></a></li>
             <li><a class="social-button" href="#" aria-label="Фейсбук"></a></li>
             <li><a class="social-button" href="#" aria-label="Инстаграм"></a></li>
-          </ul>  
+          </ul>
           <p>
             Обратная связь:
             <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
@@ -324,10 +333,10 @@
         <p>Товар добавлен в корзину!</p>
       </div>
       <div>
-        <button type="button">Оформить заказ</button>
-        <button type="button">Продолжить покупки</button>
+        <a class="button" href="#" tabindex="0">Оформить заказ</a>
+        <a class="button" href="#" tabindex="0">Продолжить покупки</a>
       </div>
-      <span class="modal-close">Закрыть</span>
+      <button class="modal-close" type="button">Закрыть</button>
     </section>
 
     <!-- popUp Mail -->
