сменил address в футере на ul

--- a/catalog.html
+++ b/catalog.html
@@ -274,10 +274,14 @@
       </div>
       <div class="footer-middle">
         <div class="container">
-          <address class="address">
-            г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
-            +7(812)555-05-55
-          </address>
+          <ul class="footer-contacts">
+            <li class="footer-contacts-adress">
+              г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
+            </li>
+            <li class="footer-contacts-phone">
+              +7(812)555-05-55
+            </li>
+          </ul>
           <ul class="footer-top-navigation">
             <li><a href="materials.html">Материалы</a></li>
             <li><a href="equipment.html">Техника</a></li>
