--- a/index.html
+++ b/index.html
@@ -279,22 +279,26 @@
     <footer class="main-footer">
       <div class="footer-top">
         <div class="container">
-          <span class="header-logo">Техномарт</span>          
+          <span class="header-logo">Техномарт</span>
           <ul class="footer-top-navigation">
             <li><a href="about-us.html">Компания</a></li>
             <li><a href="news.html">Новости</a></li>
             <li><a href="catalog.html">Каталог</a></li>
             <li><a href="delivery.html">Доставка</a></li>
             <li><a href="contacts.html">Контакты</a></li>
-          </ul>          
+          </ul>
         </div>
       </div>
       <div class="footer-middle">
         <div class="container">
-          <address class="address">
-            г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
-            +7(812)555-05-55
-          </address>
+          <ul class="footer-contacts">
+            <li class="footer-contacts-adress">
+              г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
+            </li>
+            <li class="footer-contacts-phone">
+              +7(812)555-05-55
+            </li>
+          </ul>
           <ul class="footer-top-navigation">
             <li><a href="materials.html">Материалы</a></li>
             <li><a href="equipment.html">Техника</a></li>
