никогда такого не было и вот опять(адрес в футере)

--- a/index.html
+++ b/index.html
@@ -291,14 +291,10 @@
       </div>
       <div class="footer-middle">
         <div class="container">
-          <ul class="footer-contacts">
-            <li class="footer-contacts-adress">
-              г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
-            </li>
-            <li class="footer-contacts-phone">
-              +7(812)555-05-55
-            </li>
-          </ul>
+          <p class="footer-contacts">
+            г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br> <!-- глупый першин сказал поставить тут br, хотя наставнег марина не разрешила, ох уж этот першин, совсем ничего не понимает в разметке проектов академии -->
+            +7(812)555-05-55
+          </p>
           <ul class="footer-top-navigation">
             <li><a href="materials.html">Материалы</a></li>
             <li><a href="equipment.html">Техника</a></li>
