--- a/index.html
+++ b/index.html
@@ -222,27 +222,27 @@
                 <li>Кредит</li>
               </ul>
             </div>
-            <div class="delivery-description">
-              <h2>Доставка</h2>
+            <section class="delivery-description">
+              <h3>Доставка</h3>
               <p>
                 Мы с удовольствием доставим ваш товар прямо<br> к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем,<br> поднимая его на ваш этаж!
               </p>
-            </div>
-            <div class="security-description">
-              <h2>Гарантия</h2>
+            </section>
+            <section class="security-description">
+              <h3>Гарантия</h3>
               <p>
                 Если купленный у нас товар поломается или заискрит,<br> а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый.<br> Дом уж восстановите как-нибудь сами.
               </p>
-            </div>
-            <div class="credit-description">
-              <h2>Кредит</h2>
+            </section>
+            <section class="credit-description">
+              <h3>Кредит</h3>
               <p>
                 Залезть в долговую яму стало проще.<br> Кредитные консультации придут вам на помощь.
               </p>
               <a class="button" href="#" tabindex="0">
                 Отправить заявку
               </a>
-            </div>
+            </section>
           </div>
         </div>
       </section>
