--- a/catalog.html
+++ b/catalog.html
@@ -274,10 +274,10 @@
       </div>
       <div class="footer-middle">
         <div class="container">
-          <p class="footer-contacts">
+          <address class="footer-contacts">
             г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br> <!-- глупый першин сказал поставить тут br, хотя наставнег марина не разрешила, ох уж этот першин, совсем ничего не понимает в разметке проектов академии -->
             +7(812)555-05-55
-          </p>
+          </address>
           <ul class="footer-top-navigation">
             <li><a href="materials.html">Материалы</a></li>
             <li><a href="equipment.html">Техника</a></li>
